--- a/Skin/default/screens/webradio_dialogDeleteFilter.xaml
+++ b/Skin/default/screens/webradio_dialogDeleteFilter.xaml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <Include
   xmlns="www.team-mediaportal.com/2008/mpf/directx"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,9 +7,9 @@
   <Include.Resources>
 
     <!-- Header -->
-    <ResourceWrapper x:Key="Dialog_Header_Text" Resource="[Webradio.Dialog.DeleteFilter.Header]"/>
+    <ResourceWrapper x:Key="Dialog_Header_Text" Resource="[Webradio.Dialog.DeleteFilter.Header]" />
 
-    <Model x:Key="Model" Id="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89"/>
+    <Model x:Key="Model" Id="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89" />
 
     <ControlTemplate x:Key="Contents_Template">
       <DockPanel DataContext="{Binding Source={StaticResource Model}}">
@@ -18,20 +19,22 @@
             <RowDefinition Height="10*" />
           </Grid.RowDefinitions>
 
-          <ListView x:Name="lvFavorites" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{ThemeResource WebradioFilterListViewStyle}"
-            ItemsSource="{Binding Path=FilterItems}" >
+          <ListView x:Name="lvFavorites" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                    Style="{ThemeResource WebradioFilterListViewStyle}"
+                    ItemsSource="{Binding Path=FilterItems}">
             <ListView.Resources>
               <CommandList x:Key="Menu_Command">
                 <Command Source="{StaticResource Model}" Path="Select">
                   <Command.Parameters>
-                    <LateBoundValue BindingValue="{Binding}"/>
+                    <LateBoundValue BindingValue="{Binding}" />
                   </Command.Parameters>
                 </Command>
               </CommandList>
             </ListView.Resources>
           </ListView>
 
-          <Button Grid.Row="1" Margin="10,0,10,0" Content="[Webradio.Dialog.DeleteFilter.Delete]" Command="{Command Delete}"/>
+          <Button Grid.Row="1" Margin="10,0,10,0" Content="[Webradio.Dialog.DeleteFilter.Delete]"
+                  Command="{Command Delete}" />
 
         </Grid>
       </DockPanel>
