--- a/Skin/WMCSkin/themes/default/styles/WebradioStyles.xaml
+++ b/Skin/WMCSkin/themes/default/styles/WebradioStyles.xaml
@@ -1,54 +1,150 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ResourceDictionary
   xmlns="www.team-mediaportal.com/2008/mpf/directx"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:collections="clr-namespace:MediaPortal.UI.Presentation.DataObjects;assembly=MediaPortal.UI"
+  xmlns:mp_special_controls="clr-namespace:MediaPortal.UI.SkinEngine.SpecialElements.Controls;assembly=SkinEngine"
   xmlns:wrh="clr-namespace:Webradio.Models"
   DependsOnStyleResources="Buttons,Colors,Consts">
+
+  <Style x:Key="PrimaryWebRadioOSDStyle" TargetType="{x:Type mp_special_controls:PlayerControl}">
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type mp_special_controls:PlayerControl}">
+          <ControlTemplate.Resources>
+            <Model x:Key="AudioPlayerModel" Id="D8998340-DA2D-42be-A29B-6D7A72AEA2DC" />
+          </ControlTemplate.Resources>
+
+          <Control Style="{ThemeResource OSDAudioContainer}"
+                   DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}}"
+                   Margin="10,0,10,10" HorizontalAlignment="Stretch">
+            <Control.Resources>
+              <ControlTemplate x:Key="OSD_InfoArea_Template">
+
+                <Grid x:Name="PlayerGrid" Margin="5,0,5,0"
+                      HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                  <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                  </Grid.ColumnDefinitions>
+                  <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                  </Grid.RowDefinitions>
+                </Grid>
+              </ControlTemplate>
+
+              <ControlTemplate x:Key="OSD_Controls_Template">
+                <DockPanel Margin="0" HorizontalAlignment="Right">
+                  <Grid DockPanel.Dock="Right">
+                    <Grid.ColumnDefinitions>
+                      <ColumnDefinition Width="10" />
+                      <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                      <RowDefinition Height="Auto" />
+                      <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <StackPanel x:Name="PlayControlsPanel" Orientation="Horizontal" Grid.Column="1" Grid.Row="1"
+                                Margin="0"
+                                VerticalAlignment="Center" HorizontalAlignment="Right">
+                      <StackPanel.LayoutTransform>
+                        <TransformGroup>
+                          <ScaleTransform ScaleX="1.3" ScaleY="1.3" />
+                        </TransformGroup>
+                      </StackPanel.LayoutTransform>
+
+                      <Button x:Name="StopButton" Style="{ThemeResource StopButtonStyle}" Margin="0"
+                              IsVisible="{Binding CanStop}"
+                              Command="{Command Stop}" />
+                      <Button x:Name="SkipBackButton" Style="{ThemeResource SkipBackButtonStyle}" Margin="0"
+                              IsVisible="{Binding CanSkipBack}"
+                              Command="{Command Previous}" />
+                      <Button x:Name="RewindButton" Style="{ThemeResource RewindButtonStyle}" Margin="0"
+                              IsVisible="{Binding CanSeekBackward}"
+                              Command="{Command SeekBackward}" />
+                      <Button x:Name="PlayButton" Style="{ThemeResource PlayButtonStyle}" Margin="5,0,5,0"
+                              IsVisible="{Binding CanPlay}"
+                              Command="{Command Play}" />
+                      <Button x:Name="PauseButton" Style="{ThemeResource PauseButtonStyle}" Margin="5,0,5,0"
+                              IsVisible="{Binding CanPause}"
+                              Command="{Command Pause}" />
+                      <Button x:Name="ForwardButton" Style="{ThemeResource ForwardButtonStyle}" Margin="0"
+                              IsVisible="{Binding CanSeekForward}"
+                              Command="{Command SeekForward}" />
+                      <Button x:Name="SkipForwardButton" Style="{ThemeResource SkipForwardButtonStyle}" Margin="0"
+                              IsVisible="{Binding CanSkipForward}"
+                              Command="{Command Next}" />
+                      <Image Source="PlayerControl\DIVIDER.PNG" Height="35" Stretch="Uniform"
+                             VerticalAlignment="Center" Margin="3,0,3,0" />
+                      <Button x:Name="AudioActiveButton" Style="{ThemeResource AudioActiveButtonStyle}" Margin="0"
+                              Command="{Command AudioButtonPressed}" IsVisible="{Binding IsAudio}" />
+                      <Button x:Name="AudioInactiveButton" Style="{ThemeResource AudioInactiveButtonStyle}" Margin="0"
+                              Command="{Command AudioButtonPressed}" IsVisible="{Binding !IsAudio}" />
+                      <Button x:Name="VolumeDownButton" Style="{ThemeResource VolumeDownButtonStyle}" Margin="0"
+                              Command="{Command Source={StaticResource GeneralPlayerModel},Path=VolumeDown}" />
+                      <Button x:Name="VolumeUpButton" Style="{ThemeResource VolumeUpButtonStyle}" Margin="0"
+                              Command="{Command Source={StaticResource GeneralPlayerModel},Path=VolumeUp}" />
+                    </StackPanel>
+                    <!-- PlayControlsPanel -->
+                  </Grid>
+                  <!-- PlayerGrid -->
+                </DockPanel>
+              </ControlTemplate>
+            </Control.Resources>
+          </Control>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+    <Setter Property="PlayerContext" Value="PrimaryPlayer" />
+  </Style>
 
   <!-- A data template which shows an image and the Name of the ListItem -->
   <DataTemplate x:Key="WebradioFilterItemDataTemplate" DataType="{x:Type collections:ListItem}">
     <DockPanel x:Name="ItemControl" LastChildFill="False">
       <CheckBox DockPanel.Dock="Left" IsChecked="{Binding Selected}" />
       <Label x:Name="ItemLabel" DockPanel.Dock="Center" Content="{Binding [Name]}"
-        HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
-        Color="{ThemeResource TextColor}"/>
+             HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
+             Color="{ThemeResource TextColor}" />
     </DockPanel>
   </DataTemplate>
 
   <DataTemplate x:Key="WebradioDlgFavoritesDataTemplate" DataType="{x:Type collections:ListItem}">
     <DockPanel x:Name="ItemControl" LastChildFill="False">
       <Label x:Name="ItemLabelLeft" DockPanel.Dock="Center" Content="{Binding [Name]}"
-        HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
-        Color="{ThemeResource TextColor}"/>
+             HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
+             Color="{ThemeResource TextColor}" />
       <Label x:Name="ItemLabelRight" DockPanel.Dock="Center" Content="{Binding [Count]}"
-        HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
-        Color="{ThemeResource TextColor}"/>
+             HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
+             Color="{ThemeResource TextColor}" />
     </DockPanel>
   </DataTemplate>
 
   <!-- ListView style to be used in the content area of the screens -->
   <Style x:Key="WebradioFilterListViewStyle" BasedOn="{ThemeResource DefaultListViewStyle}">
-    <Setter Property="ItemTemplate" Value="{ThemeResource WebradioFilterItemDataTemplate}"/>
-    <Setter Property="DataStringProvider" Value="{ThemeResource ContentsMenuItemDataStringProvider}"/>
-    <Setter Property="ItemContainerStyle" Value="{ThemeResource DefaultMenuItemContainerStyle}"/>
+    <Setter Property="ItemTemplate" Value="{ThemeResource WebradioFilterItemDataTemplate}" />
+    <Setter Property="DataStringProvider" Value="{ThemeResource ContentsMenuItemDataStringProvider}" />
+    <Setter Property="ItemContainerStyle" Value="{ThemeResource DefaultMenuItemContainerStyle}" />
     <Setter Property="ItemsPanel">
       <Setter.Value>
         <ItemsPanelTemplate>
-          <VirtualizingStackPanel x:Name="ListItemsHost" IsItemsHost="True"/>
+          <VirtualizingStackPanel x:Name="ListItemsHost" IsItemsHost="True" />
         </ItemsPanelTemplate>
       </Setter.Value>
     </Setter>
   </Style>
 
   <Style x:Key="WebradioDlgFavoritesListViewStyle" BasedOn="{ThemeResource DefaultListViewStyle}">
-    <Setter Property="ItemTemplate" Value="{ThemeResource WebradioDlgFavoritesDataTemplate}"/>
-    <Setter Property="DataStringProvider" Value="{ThemeResource ContentsMenuItemDataStringProvider}"/>
-    <Setter Property="ItemContainerStyle" Value="{ThemeResource DefaultMenuItemContainerStyle}"/>
+    <Setter Property="ItemTemplate" Value="{ThemeResource WebradioDlgFavoritesDataTemplate}" />
+    <Setter Property="DataStringProvider" Value="{ThemeResource ContentsMenuItemDataStringProvider}" />
+    <Setter Property="ItemContainerStyle" Value="{ThemeResource DefaultMenuItemContainerStyle}" />
     <Setter Property="ItemsPanel">
       <Setter.Value>
         <ItemsPanelTemplate>
-          <VirtualizingStackPanel x:Name="ListItemsHost" IsItemsHost="True"/>
+          <VirtualizingStackPanel x:Name="ListItemsHost" IsItemsHost="True" />
         </ItemsPanelTemplate>
       </Setter.Value>
     </Setter>
@@ -63,9 +159,9 @@
                   IsEnabled="{Binding Enabled}" SetFocus="{Binding Path=Selected,Mode=OneTime}">
             <Button.Triggers>
               <Trigger Property="HasFocus" Value="True">
-                <Setter TargetName="ItemLabel" Property="Color" Value="{ThemeResource TextColor}"/>
-                <Setter TargetName="ItemLabel" Property="Scroll" Value="Auto"/>
-                <Setter Property="StackPanel.ZIndex" Value="100.0"/>
+                <Setter TargetName="ItemLabel" Property="Color" Value="{ThemeResource TextColor}" />
+                <Setter TargetName="ItemLabel" Property="Scroll" Value="Auto" />
+                <Setter Property="StackPanel.ZIndex" Value="100.0" />
               </Trigger>
             </Button.Triggers>
           </Button>
@@ -76,13 +172,14 @@
 
   <DataTemplate x:Key="WebRadioItemDataTemplate" DataType="{x:Type collections:ListItem}">
     <DockPanel x:Name="ItemControl" LastChildFill="False">
-      <Image DockPanel.Dock="Right" Margin="10,0,10,0" Stretch="Uniform" Height="32" >
+      <Image DockPanel.Dock="Right" Margin="10,0,10,0" Stretch="Uniform" Height="32">
         <Image.Source>
-          <Binding Path="[CountryCode]" Converter="{StaticResource StringFormatConverter}" ConverterParameter="{}LanguageFlags\{0}.png"/>
+          <Binding Path="[CountryCode]" Converter="{StaticResource StringFormatConverter}"
+                   ConverterParameter="{}LanguageFlags\{0}.png" />
         </Image.Source>
       </Image>
-      
-      <StackPanel DockPanel.Dock="Left" VerticalAlignment="Center" >
+
+      <StackPanel DockPanel.Dock="Left" VerticalAlignment="Center">
         <Canvas Height="32" Width="32" Background="#00000000">
           <Rectangle Height="32" Width="32" RadiusY="5" RadiusX="5" Stroke="Black">
             <Rectangle.Fill>
@@ -91,39 +188,39 @@
           </Rectangle>
           <Rectangle Height="32" Width="32" RadiusY="5" RadiusX="5" Stroke="Black">
             <Rectangle.Fill>
-              <ImageBrush ImageSource="{Binding [ImageSrc]}"/>
+              <ImageBrush ImageSource="{Binding [ImageSrc]}" />
             </Rectangle.Fill>
           </Rectangle>
           <Rectangle Height="32" Width="32" RadiusY="5" RadiusX="5" Stroke="Black" Opacity="0.5">
             <Rectangle.Fill>
               <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black" Offset="0"/>
-                <GradientStop Offset="0.073"/>
-                <GradientStop Color="Transparent" Offset="1"/>
-                <GradientStop Color="Transparent" Offset="0.103"/>
+                <GradientStop Color="Black" Offset="0" />
+                <GradientStop Offset="0.073" />
+                <GradientStop Color="Transparent" Offset="1" />
+                <GradientStop Color="Transparent" Offset="0.103" />
               </LinearGradientBrush>
             </Rectangle.Fill>
           </Rectangle>
         </Canvas>
       </StackPanel>
-      
+
       <Label x:Name="ItemLabel" DockPanel.Dock="Center" Content="{Binding [Name]}" Margin="10,0,0,0"
              HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
-             Color="{ThemeResource MediaItemUnwatchedColor}" FontFamily="SegoeUIBold"/>
+             Color="{ThemeResource MediaItemUnwatchedColor}" FontFamily="SegoeUIBold" />
     </DockPanel>
   </DataTemplate>
-  
+
   <Style x:Key="WebRadioListViewStyle" BasedOn="{ThemeResource ContentsMenuListViewStyle}">
-    <Setter Property="ItemTemplate" Value="{ThemeResource WebRadioItemDataTemplate}"/>
-    <Setter Property="DataStringProvider" Value="{ThemeResource ContentsMenuItemDataStringProvider}"/>
-    <Setter Property="ItemContainerStyle" Value="{ThemeResource WebRadioItemContainerStyle}"/>
+    <Setter Property="ItemTemplate" Value="{ThemeResource WebRadioItemDataTemplate}" />
+    <Setter Property="DataStringProvider" Value="{ThemeResource ContentsMenuItemDataStringProvider}" />
+    <Setter Property="ItemContainerStyle" Value="{ThemeResource WebRadioItemContainerStyle}" />
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ListView}">
           <ScrollViewer CanContentScroll="True" Margin="0" Style="{ThemeResource VerticalMediaScrollViewerStyle}"
                         HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled"
                         HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <ItemsPresenter VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+            <ItemsPresenter VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
           </ScrollViewer>
         </ControlTemplate>
       </Setter.Value>
@@ -132,28 +229,31 @@
       <BindingSetter.BindingWrapper>
         <BindingWrapper>
           <BindingWrapper.Binding>
-              <Binding>
-                <Binding.Source>
-                  <ItemsPanelTemplate>
-                    <!--VirtualizingStackPanel x:Name="ListItemsHost" IsItemsHost="True"/-->
-                    <AnimatedStackPanel x:Name="ListItemsHost" IsItemsHost="True" ScrollMargin="130,130" Margin="0,-20,0,-60">
-                      <AnimatedStackPanel.Resources>
-                        <Storyboard x:Key="ScrollAnimation" FillBehavior="HoldEnd">
-                          <DoubleAnimation BeginTime="00:00:00" From="0" To="1" Duration="00:00:00.300" FillBehavior="HoldEnd" 
-                                           Storyboard.TargetName="ListItemsHost" Storyboard.TargetProperty="ScrollOffsetMultiplier" />
-                        </Storyboard>
-                      </AnimatedStackPanel.Resources>
-                      <AnimatedStackPanel.Triggers>
-                        <EventTrigger RoutedEvent="AnimatedStackPanel.Scroll">
-                          <EventTrigger.Actions>
-                            <BeginStoryboard Storyboard="{ThemeResource ScrollAnimation}"/>
-                          </EventTrigger.Actions>
-                        </EventTrigger>
-                      </AnimatedStackPanel.Triggers>
-                    </AnimatedStackPanel>
-                  </ItemsPanelTemplate>
-                </Binding.Source>
-              </Binding>
+            <Binding>
+              <Binding.Source>
+                <ItemsPanelTemplate>
+                  <!--VirtualizingStackPanel x:Name="ListItemsHost" IsItemsHost="True"/-->
+                  <AnimatedStackPanel x:Name="ListItemsHost" IsItemsHost="True" ScrollMargin="130,130"
+                                      Margin="0,-20,0,-60">
+                    <AnimatedStackPanel.Resources>
+                      <Storyboard x:Key="ScrollAnimation" FillBehavior="HoldEnd">
+                        <DoubleAnimation BeginTime="00:00:00" From="0" To="1" Duration="00:00:00.300"
+                                         FillBehavior="HoldEnd"
+                                         Storyboard.TargetName="ListItemsHost"
+                                         Storyboard.TargetProperty="ScrollOffsetMultiplier" />
+                      </Storyboard>
+                    </AnimatedStackPanel.Resources>
+                    <AnimatedStackPanel.Triggers>
+                      <EventTrigger RoutedEvent="AnimatedStackPanel.Scroll">
+                        <EventTrigger.Actions>
+                          <BeginStoryboard Storyboard="{ThemeResource ScrollAnimation}" />
+                        </EventTrigger.Actions>
+                      </EventTrigger>
+                    </AnimatedStackPanel.Triggers>
+                  </AnimatedStackPanel>
+                </ItemsPanelTemplate>
+              </Binding.Source>
+            </Binding>
           </BindingWrapper.Binding>
         </BindingWrapper>
       </BindingSetter.BindingWrapper>
